syntax = "proto2";

package fast_semantic_segmentation.protos;
import "protos/hyperparams.proto";
import "protos/losses.proto";

message PSPNet {
    optional int32 num_classes = 1;
    optional PSPNetICNetFeatureExtractor feature_extractor = 2;
    optional Hyperparams hyperparams = 3;
    optional Loss loss = 4;
    // The filter compression factor when applying filter/channel pruning
    optional float filter_scale = 5;
    optional bool scale_predictions = 6;
}

message PSPNetICNetFeatureExtractor {
    optional string type = 1;
}